# balance_reporter

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  makefile
app/: Dockerfile  README.md  pyproject.toml  setup.cfg
app/src/: config.py  errors.py  main.py
app/src/base/commands/: base_command.py
app/src/base/entities/: root_entity.py
app/src/base/ports/: db_handler.py  email_handler.py  file_handler.py
app/src/domain/adapters/db/: aws_db_handler.py  local_db_handler.py
app/src/domain/adapters/email/: aws_email_handler.py  local_email_handler.py
app/src/domain/adapters/file/: aws_file_handler.py  local_file_handler.py
app/src/domain/commands/: balance_command.py
app/src/domain/models/: account.py  transaction.py
app/src/entrypoints/: aws.py  local.py
app/tests/: conftest.py
app/tests/domain/adapters/file/: test_local_file_handler.py
app/tests/domain/models/: test_account.py
config/: mongo-init.js
infra/modules/api_gateway/: data.tf  main.tf  outputs.tf  variables.tf
infra/modules/dynamo/: main.tf  outputs.tf  variables.tf
infra/modules/lambda/: data.tf  locals.tf  main.tf  outputs.tf  variables.tf
infra/modules/log_group/: main.tf  outputs.tf  variables.tf
infra/modules/s3_bucket/: main.tf  outputs.tf  variables.tf
infra/stacks/app/: data.tf  locals.tf  main.tf  outputs.tf  provider.tf  variables.tf
infra/stacks/registry/: main.tf  variables.tf  versions.tf
